--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage" : "https://undefinedUser1381.github.io/dashboard/",
+  "homepage": "https://undefinedUser1381.github.io/dashboard/",
   "name": "dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -15,14 +15,23 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/react": "^2.6.11",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.16.1",
     "gh-pages": "^6.3.0",
     "i18next": "^24.2.1",
+    "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
   },
   "devDependencies": {
