--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.16.1",
     "gh-pages": "^6.3.0",
     "i18next": "^24.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
