--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.9",
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-slot": "^1.1.1",
