--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gh-pages": "^6.3.0",
     "i18next": "^24.2.1",
     "js-cookie": "^3.0.5",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
