--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/alert": "^2.2.10",
     "@heroui/button": "^2.2.9",
     "@heroui/input": "^2.4.10",
     "@heroui/modal": "^2.2.8",
